added additional methods and cleaned up path params in REST
